# mestrado-CACR-LAB02-SPKISON

./: Procfile  README.md  client_keys_generator.py  constants.py  create_cert.py  gradio_ui.py  main.py  pyproject.toml  requirements.txt  setup.sh
