[project]
name = "lab02-spkison-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel Jesus"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cryptography (>=46.0.3,<47.0.0)",
    "gradio (>=6.1.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
